--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,8 @@ set -g mouse on
 set -g default-terminal "screen-256color"
 set-window-option -g mode-keys vi # enable vim keys
 set-option -g history-limit 100000
+set -g base-index 1
+setw -g pane-base-index 1
 
 bind -n C-k clear-history
 
