--- a/.tmux.conf
+++ b/.tmux.conf
@@ -140,3 +140,12 @@ set-window-option -g window-status-format '#[fg=default] #I #W '
 # panes
  set -g pane-active-border-style fg=magenta
  set -g pane-border-style fg='#555555'
+
+set -g status-position "top"
+
+ set -g @plugin 'tmux-plugins/tpm'
+ set -g @plugin 'tmux-plugins/tmux-sensible'
+ set -g @plugin 'egel/tmux-gruvbox'
+ set -g @tmux-gruvbox 'dark' # or light
+
+ run '~/.tmux/plugins/tpm/tpm'
