--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,9 @@ bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
 
 set -s escape-time 0
 set -g mouse on
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
+# set-option -g default-terminal "screen-256color"
+set-option -sa terminal-features ',$TERM:RGB'
 set-window-option -g mode-keys vi # enable vim keys
 set-option -g history-limit 100000
 set -g base-index 1
