add stow as linked manager for better managing .files

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,9 +3,15 @@ bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
 
 set -s escape-time 0
 set -g mouse on
+
 set -g default-terminal "tmux-256color"
-# set-option -g default-terminal "screen-256color"
-set-option -sa terminal-features ',$TERM:RGB'
+set-option -sa terminal-features ',alacritty:RGB'
+set-option -ga terminal-overrides ',alacritty:Tc'
+# set-option -sa terminal-features ',kitty:RGB'
+# set-option -ga terminal-overrides ',kitty:Tc'
+set-option -g default-terminal "screen-256color"
+set-option -g focus-events on
+
 set-window-option -g mode-keys vi # enable vim keys
 set-option -g history-limit 100000
 set -g base-index 1
@@ -154,5 +160,7 @@ set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{25
  set -g @plugin 'tmux-plugins/tmux-sensible'
  set -g @plugin 'egel/tmux-gruvbox'
  set -g @tmux-gruvbox 'dark' # or light
+ set -g @plugin 'srcery-colors/srcery-tmux'
 
+ run -b ~/.tmux/themes/srcery-tmux/srcery.tmux
  run '~/.tmux/plugins/tpm/tpm'
