--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,6 +40,8 @@ bind | split-window -h
 bind - split-window -v
 
 
+bind -r C-g display-popup -w 80% -h 80% -E "lazygit" # open lazygit whenever
+
 bind -r j resize-pane -D 5
 bind -r k resize-pane -U 5
 bind -r l resize-pane -R 5
