--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,114 +39,23 @@ unbind '"' # Split horizontally
 bind | split-window -h
 bind - split-window -v
 
-
 bind -r C-g display-popup -w 80% -h 80% -E "lazygit" # open lazygit whenever
-
-bind -r j resize-pane -D 5
-bind -r k resize-pane -U 5
-bind -r l resize-pane -R 5
-bind -r h resize-pane -L 5
-
-bind -r m resize-pane -Z
-
-# Smart pane switching with awareness of Vim splits.
-# See: https://github.com/christoomey/vim-tmux-navigator
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
-bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
-bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
-bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
-tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
-if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
-if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
 
 bind-key -T copy-mode-vi 'C-h' select-pane -L
 bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
-bind-key -T copy-mode-vi 'C-\' select-pane -l
 
 
 
-
-# Set status bar on
-# set -g status on
-#
-# # Update the status line every second
-# set -g status-interval 1
-#
-# # Set the position of window lists.
-# set -g status-justify centre # [left | centre | right]
-#
-# # Set Vi style keybinding in the status line
-# set -g status-keys vi
-#
-# # Set the status bar position
-# set -g status-position top # [top, bottom]
-#
-# # Set status bar background and foreground color.
-# set -g status-style fg=colour136,bg="#002b36"
-#
-# # Set left side status bar length and style
-# set -g status-left-length 60
-# set -g status-left-style default
-#
-# # Display the session name
-# set -g status-left "#[fg=green] ❐ #S #[default]"
-#
-# # Display the os version (Mac Os)
-# set -ag status-left " #[fg=black] #[fg=green,bright]  #(sw_vers -productVersion) #[default]"
-#
-# # Display the battery percentage (Mac OS)
-# set -ag status-left "#[fg=green,bg=default,bright] 🔋 #(pmset -g batt | tail -1 | awk '{print $3}' | tr -d ';') #[default]"
-#
-# # Set right side status bar length and style
-# set -g status-right-length 140
-# set -g status-right-style default
-#
-# # Display the cpu load (Mac OS)
-# set -g status-right "#[fg=green,bg=default,bright]  #(top -l 1 | grep -E "^CPU" | sed 's/.*://') #[default]"
-#
-# # Display the date
-# set -ag status-right "#[fg=white,bg=default]  %a %d #[default]"
-#
-# # Display the time
-# set -ag status-right "#[fg=colour172,bright,bg=default] ⌚︎%l:%M %p #[default]"
-#
-# # Display the hostname
-# set -ag status-right "#[fg=cyan,bg=default] ☠ #H #[default]"
-#
-# # Set the inactive window color and style
-# set -g window-status-style fg=colour244,bg=default
-# set -g window-status-format ' #I #W '
-#
-# # Set the active window color and style
-# set -g window-status-current-style fg=black,bg=colour136
-# set -g window-status-current-format ' #I #W '
-#
-#
-# # Colors for pane borders(default)
-# setw -g pane-border-style fg=green,bg=black
-# setw -g pane-active-border-style fg=white,bg=black
-
-# # Active pane normal, other shaded out
-# setw -g window-style fg=colour240,bg=colour235
-# setw -g window-active-style fg=white,bg=black
-
-
-
-
-
-## set status bar
+# set status bar
 set -g status-style bg=default
 
 # right side
-set -g status-right-length 100
+set -g status-right-length 300
 set -g status-right-style bold
 set -g status-right '❮#[fg=yellow] %H:%M #[fg=default]|#[fg=blue] %d.%m.%y #[fg=default]| #[fg=red]@#[fg=cyan]#H '
+
 
 # left side
 set -g status-left-length 100
@@ -169,11 +78,12 @@ set -g default-terminal "${TERM}"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 
- set -g @plugin 'tmux-plugins/tpm'
- set -g @plugin 'tmux-plugins/tmux-sensible'
- set -g @plugin 'egel/tmux-gruvbox'
- set -g @tmux-gruvbox 'dark' # or light
- set -g @plugin 'srcery-colors/srcery-tmux'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'egel/tmux-gruvbox'
+set -g @tmux-gruvbox 'dark' # or light
+set -g @plugin 'srcery-colors/srcery-tmux'
 
- run -b ~/.tmux/themes/srcery-tmux/srcery.tmux
- run '~/.tmux/plugins/tpm/tpm'
+run -b ~/.tmux/themes/srcery-tmux/srcery.tmux
+run '~/.tmux/plugins/tpm/tpm'
+
