--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -20,11 +20,11 @@ monitor=,preferred,auto,auto
 
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
-  exec-once = ~/.config/hypr/scripts/xdg
-  exec-once=/usr/lib/polkit-kde-authentication-agent-1
+exec-once = ~/.config/hypr/scripts/xdg
+exec-once=/usr/lib/polkit-kde-authentication-agent-1
 
-  exec-once = wl-paste --type text --watch cliphist store #Stores only text data
-  exec-once = wl-paste --type image --watch cliphist store #Stores only image data
+exec-once = wl-paste --type text --watch cliphist store #Stores only text data
+exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -43,67 +43,65 @@ env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
-    kb_layout = us,rs
-    kb_variant =
-    kb_model =
-    kb_options = grp:alt_space_toggle 
-    kb_rules =
+	kb_layout = us,rs
+		kb_variant =
+		kb_model =
+		kb_options = grp:alt_space_toggle 
+		kb_rules =
 
-    follow_mouse = 1
-    natural_scroll = yes
+		follow_mouse = 1
+		natural_scroll = yes
 
-    repeat_rate=50
-    repeat_delay=200
+		repeat_rate=50
+		repeat_delay=200
 
-    touchpad {
-        natural_scroll = no
-    }
+		touchpad {
+			natural_scroll = no
+		}
 
-    sensitivity = 0 # -1.0 to 1.0, 0 means no modification.
+	sensitivity = 0 # -1.0 to 1.0, 0 means no modification.
 }
 
 general {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
+# See https://wiki.hyprland.org/Configuring/Variables/ for more
+	gaps_in = 5
+		gaps_out = 20
+		border_size = 2
+		col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+		col.inactive_border = rgba(595959aa)
 
-    gaps_in = 5
-    gaps_out = 20
-    border_size = 2
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+		layout = dwindle
 
-    layout = dwindle
-
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
-    allow_tearing = false
+# Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
+		allow_tearing = false
 }
 
 decoration {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
+# See https://wiki.hyprland.org/Configuring/Variables/ for more
+	rounding = 0
 
-    rounding = 0
-    
-    blur {
-        enabled = true
-        xray = true
-        special = false
-        new_optimizations = true
-        size = 7
-        passes = 4
-        brightness = 1
-        noise = 0.01
-        contrast = 1
-        popups = true
-        popups_ignorealpha = 0.6
-    }
+		blur {
+			enabled = true
+				xray = true
+				special = false
+				new_optimizations = true
+				size = 7
+				passes = 4
+				brightness = 1
+				noise = 0.01
+				contrast = 1
+				popups = true
+				popups_ignorealpha = 0.6
+		}
 
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+	drop_shadow = yes
+		shadow_range = 4
+		shadow_render_power = 3
+		col.shadow = rgba(1a1a1aee)
 
-    dim_inactive = false
-    dim_strength = 0.1
-    dim_special = 0
+		dim_inactive = false
+		dim_strength = 0.1
+		dim_special = 0
 }
 
 animations {
@@ -119,59 +117,57 @@ animations {
 }
 
 dwindle {
-    # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
-    pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = yes # you probably want this
+# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
+	pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
+		preserve_split = yes # you probably want this
 }
 
 master {
-    # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
+# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
+	new_is_master = true
 }
 
 gestures {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = off
+# See https://wiki.hyprland.org/Configuring/Variables/ for more
+	workspace_swipe = off
 }
 
 misc {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    cursor_zoom_factor = 1.0
-    cursor_zoom_rigid = false
+# See https://wiki.hyprland.org/Configuring/Variables/ for more
+	force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
+		cursor_zoom_factor = 1.0
+		cursor_zoom_rigid = false
 }
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
 device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
+	name = epic-mouse-v1
+		sensitivity = -0.5
 }
 
 plugin {
-  hyprbars {
-        # example config
-        bar_height = 20
-        bar_text_size = 12
-        bar_padding = 10
-        bar_title_enabled = true
+	hyprbars {
+# example config
+		bar_height = 20
+			bar_text_size = 12
+			bar_padding = 10
+			bar_title_enabled = true
 
 
-        # example buttons (R -> L)
-        # hyprbars-button = color, size, on-click
-        hyprbars-button = rgb(ff4040), 12, 󰖭, hyprctl dispatch killactive
-    }
+# example buttons (R -> L)
+# hyprbars-button = color, size, on-click
+			hyprbars-button = rgb(ff4040), 12, 󰖭, hyprctl dispatch killactive
+	}
 }
 
 # Layers
 layerrule = blur,wofi
 
 # Window rules
-windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
-windowrulev2 = float, title:^(meet.google.com)$
-windowrulev2 = float, class:^(yad)$
-#windowrule = move 50% 90%, title:^(YAD)$
-# windowrule = size 900 500, title:^(YAD)$
+windowrulev2 = suppressevent maximize, class:.*
+windowrulev2 = float, title:^(meet.google.com)
+windowrulev2 = float, class:^(yad)
 windowrule = float, title:(Open File)
 windowrule = center, title:(Open File)
 windowrule = size 600 400, title:(Open File)
