remove comments plugin and relay on neovim builtin comment system, add swww deamon

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -21,7 +21,8 @@ monitor=,preferred,auto,auto
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
 exec-once = ~/.config/hypr/scripts/xdg
-exec-once=/usr/lib/polkit-kde-authentication-agent-1
+exec-once = swww-daemon
+exec-once = /usr/lib/polkit-kde-authentication-agent-1
 
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
