--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -21,7 +21,7 @@ monitor=,preferred,auto,auto
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
 exec-once = ~/.config/hypr/scripts/xdg
-exec-once = swww-daemon
+exec-once = swww-daemon && dunst
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
@@ -66,15 +66,15 @@ input {
 general {
 # See https://wiki.hyprland.org/Configuring/Variables/ for more
 	gaps_in = 5
-		gaps_out = 20
-		border_size = 2
-		col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-		col.inactive_border = rgba(595959aa)
+	gaps_out = 5
+	border_size = 3
+	col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+	col.inactive_border = rgba(595959aa)
 
-		layout = dwindle
+	layout = dwindle
 
 # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
-		allow_tearing = false
+	allow_tearing = false
 }
 
 decoration {
@@ -107,14 +107,14 @@ decoration {
 
 animations {
 	enabled=1
-# bezier=overshot,0.05,0.9,0.1,1.1
-		bezier=overshot,0.13,0.99,0.29,1.1
-#bezier = linear, 0.0, 0.0, 1.0, 1.0
-		animation=windows,1,4,overshot,slide
-		animation=border,1,10,overshot
-		animation=fade,1,10,overshot
-		animation=workspaces,1,6,overshot,slidevert
-#animation = borderangle, 1, 100, linear, loop
+    # bezier=overshot,0.05,0.9,0.1,1.1
+		bezier = overshot,0.13,0.99,0.29,1.1
+    bezier = linear, 0.0, 0.0, 1.0, 1.0
+		animation = windows,1,4,overshot,slide
+		animation = border,1,10,overshot
+		animation = fade,1,10,overshot
+		animation = workspaces,1,6,overshot,slidevert
+    animation = borderangle, 1, 100, linear, loop
 }
 
 dwindle {
@@ -164,6 +164,7 @@ plugin {
 
 # Layers
 layerrule = blur,wofi
+#layerrule = blur,notifications
 
 # Window rules
 windowrulev2 = suppressevent maximize, class:.*
@@ -238,6 +239,6 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Media
-bindel=, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
-bindel=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindl=, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindel=, XF86AudioRaiseVolume, exec, pamixer -i 5 && dunstify "Volume: " -h int:value:"`pamixer --get-volume`"
+bindel=, XF86AudioLowerVolume, exec, pamixer -d 5 && dunstify "Volume: " -h int:value:"`pamixer --get-volume`"
+bindl=, XF86AudioMute, exec, pamixer -t && dunstify "Mute: " -h string:value:"`pamixer --get-mute`"
