--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -149,16 +149,23 @@ device {
 
 plugin {
 	hyprbars {
-# example config
-		bar_height = 20
-			bar_text_size = 12
-			bar_padding = 10
-			bar_title_enabled = true
+		bar_height = 28
+		bar_text_size = 8
+		bar_padding = 8
+		bar_title_enabled = true
+		bar_color = rgb(1e1e1e)
+		#col.text = $foreground
+		bar_text_font = Jetbrains Mono Nerd Font Mono Bold
+		bar_button_padding = 12
+		bar_precedence_over_border = true
+		bar_part_of_window = true
 
 
 # example buttons (R -> L)
 # hyprbars-button = color, size, on-click
-			hyprbars-button = rgb(ff4040), 12, 󰖭, hyprctl dispatch killactive
+		hyprbars-button = rgb(ff4040), 20,  , hyprctl dispatch killactive
+		hyprbars-button = rgb(eeee11), 20,  , hyprctl dispatch fullscreen 2
+		hyprbars-button = rgb(11eeee), 20, 󰛓 , hyprctl dispatch togglefloating
 	}
 }
 
@@ -173,7 +180,10 @@ windowrulev2 = float, class:^(yad)
 windowrule = float, title:(Open File)
 windowrule = center, title:(Open File)
 windowrule = size 600 400, title:(Open File)
-
+# windowrule for firefox dev tools when its detatch from window
+windowrulev2 = float, class:^(firefoxdeveloperedition)
+windowrulev2 = size 1100 700, class:^(firefoxdeveloperedition)
+windowrulev2 = center, class:^(firefoxdeveloperedition)
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = ALT
