--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -23,6 +23,7 @@ monitor = HDMI-A-2, 1920x1080@75, 0x0, 1
 exec-once = ~/.config/hypr/scripts/xdg
 exec-once = swww-daemon && dunst
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
@@ -136,9 +137,13 @@ gestures {
 misc {
 # See https://wiki.hyprland.org/Configuring/Variables/ for more
 	force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-		cursor_zoom_factor = 1.0
-		cursor_zoom_rigid = false
 }
+
+cursor {
+	zoom_rigid = false # set cursor in the center
+	zoom_factor = 1.0
+}
+
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
