update neovim and hyprland
add the best theme in the game
set floating window for dev tools firefox/brave/chrome etc..

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -185,10 +185,14 @@ windowrulev2 = float, class:^(yad)
 windowrule = float, title:(Open File)
 windowrule = center, title:(Open File)
 windowrule = size 600 400, title:(Open File)
-# windowrule for firefox dev tools when its detatch from window
+# windowrule for firefox dev tools when it's detatch from window
 windowrulev2 = float, class:^(firefoxdeveloperedition)
 windowrulev2 = size 1100 700, class:^(firefoxdeveloperedition)
 windowrulev2 = center, class:^(firefoxdeveloperedition)
+# windowrule for Brave dev tools when it's detatch form window
+windowrulev2 = float, title:^(DevTools)
+windowrulev2 = size 1100 700, title:^(DevTools)
+windowrulev2 = center, title:^(DevTools)
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = ALT
