--- a/.config/wofi/config
+++ b/.config/wofi/config
@@ -4,15 +4,15 @@ width=30%
 lines=8
 line_wrap=word
 term=alacritty
-allow_markup=true
+allow_markup=ture
 always_parse_args=false
-show_all=true
+show_all=false
 print_command=true
 layer=overlay
 allow_images=true
 sort_order=alphabetical
-gtk_dark=true
-prompt=
+gtk_dark=false
+prompt=Hi Mom!
 image_size=20
 display_generic=false
 location=center
