--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -34,7 +34,7 @@ exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 $yazi_exec = /home/radoje/pkgs/yazi/target/release/yazi
 
 # Set programs that you use
-$terminal = alacritty
+$terminal = kitty
 $fileManager = $terminal -e $yazi_exec
 $menu = wofi --show drun
 $browser = brave
