--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -26,6 +26,9 @@
 
 	<alias>
 		<family>monospace</family>
-		<prefer><family>JetBrainsMono Nerd Font Mono</family></prefer>
+		<prefer>
+			<family>JetBrains Mono Nerd Font</family>
+			<family>Ubuntu Mono</family>
+		</prefer>
 	</alias>
 </fontconfig>
