--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -40,8 +40,11 @@ $menu = wofi --show drun
 $browser = brave
 
 # Some default env vars.
-env = XCURSOR_SIZE,24
-env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
+# env = XCURSOR_SIZE,24
+env = QT_QPA_PLATFORMTHEME,qt6ct # change to qt6ct if you have that
+
+env = HYPRCURSOR_THEME,rose-pine-hyprcursor
+env = HYPRCURSOR_SIZE,54
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -72,8 +75,8 @@ general {
 	col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
 	col.inactive_border = rgba(595959aa)
 
-	# layout = dwindle
-	layout = master
+	layout = dwindle
+	# layout = master
 
 # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
 	allow_tearing = false
@@ -141,6 +144,7 @@ misc {
 }
 
 cursor {
+	enable_hyprcursor = true
 	zoom_rigid = false # set cursor in the center
 	zoom_factor = 1.0
 }
