fix issue with blur around context-menu in chromium based browsers

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -37,6 +37,7 @@ $yazi_exec = /home/radoje/pkgs/yazi/target/release/yazi
 $terminal = kitty
 $fileManager = $terminal -e $yazi_exec
 $menu = wofi --show drun
+# $browser = sh -c "brave --ozone-platform-hint=auto"
 $browser = brave
 
 # Some default env vars.
@@ -141,6 +142,9 @@ gestures {
 misc {
 # See https://wiki.hyprland.org/Configuring/Variables/ for more
 	force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
+
+	enable_swallow = true
+	swallow_regex = ^(kitty)$
 }
 
 cursor {
@@ -198,6 +202,7 @@ windowrulev2 = center, class:^(firefoxdeveloperedition)
 windowrulev2 = float, title:^(DevTools)
 windowrulev2 = size 1100 700, title:^(DevTools)
 windowrulev2 = center, title:^(DevTools)
+windowrulev2 = noblur, title:^()$, class:^()$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = ALT
