update hyprladn and add new script for wallpaper changing

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -58,8 +58,8 @@ input {
 		follow_mouse = 1
 		natural_scroll = yes
 
-		repeat_rate=50
-		repeat_delay=200
+		repeat_rate = 50
+		repeat_delay = 200
 
 		touchpad {
 			natural_scroll = no
@@ -69,7 +69,7 @@ input {
 }
 
 general {
-# See https://wiki.hyprland.org/Configuring/Variables/ for more
+	# See https://wiki.hyprland.org/Configuring/Variables/ for more
 	gaps_in = 5
 	gaps_out = 5
 	border_size = 3
@@ -79,68 +79,68 @@ general {
 	layout = dwindle
 	# layout = master
 
-# Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
+	# Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
 	allow_tearing = false
 }
 
 decoration {
-# See https://wiki.hyprland.org/Configuring/Variables/ for more
+	# See https://wiki.hyprland.org/Configuring/Variables/ for more
 	rounding = 0
 
-		blur {
-			enabled = true
-				xray = true
-				special = false
-				new_optimizations = true
-				size = 7
-				passes = 4
-				brightness = 1
-				noise = 0.01
-				contrast = 1
-				popups = true
-				popups_ignorealpha = 0.6
-		}
+	blur {
+		enabled = true
+		xray = true
+		special = false
+		new_optimizations = true
+		size = 7
+		passes = 4
+		brightness = 1
+		noise = 0.01
+		contrast = 1
+		popups = true
+		popups_ignorealpha = 0.6
+	}
 
 	drop_shadow = yes
-		shadow_range = 4
-		shadow_render_power = 3
-		col.shadow = rgba(1a1a1aee)
+	shadow_range = 4
+	shadow_render_power = 3
+	col.shadow = rgba(1a1a1aee)
 
-		dim_inactive = false
-		dim_strength = 0.1
-		dim_special = 0
+	dim_inactive = false
+	dim_strength = 0.1
+	dim_special = 0
 }
 
 animations {
 	enabled=1
-    # bezier=overshot,0.05,0.9,0.1,1.1
-		bezier = overshot,0.13,0.99,0.29,1.1
-    bezier = linear, 0.0, 0.0, 1.0, 1.0
-		animation = windows,1,4,overshot,slide
-		animation = border,1,10,overshot
-		animation = fade,1,10,overshot
-		animation = workspaces,1,6,overshot,slidevert
-    animation = borderangle, 1, 100, linear, loop
+	# bezier=overshot,0.05,0.9,0.1,1.1
+	bezier = overshot,0.13,0.99,0.29,1.1
+	bezier = linear, 0.0, 0.0, 1.0, 1.0
+	animation = windows,1,4,overshot,slide
+	animation = border,1,10,overshot
+	animation = fade,1,10,overshot
+	animation = workspaces,1,6,overshot,slidevert
+	animation = borderangle, 1, 100, linear, loop
 }
 
 dwindle {
-# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
+	# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 	pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-		preserve_split = yes # you probably want this
+	preserve_split = yes # you probably want this
 }
 
 master {
-# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
+	# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 	# new_is_master =  true
 }
 
 gestures {
-# See https://wiki.hyprland.org/Configuring/Variables/ for more
+	# See https://wiki.hyprland.org/Configuring/Variables/ for more
 	workspace_swipe = off
 }
 
 misc {
-# See https://wiki.hyprland.org/Configuring/Variables/ for more
+	# See https://wiki.hyprland.org/Configuring/Variables/ for more
 	force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
 
 	enable_swallow = true
@@ -158,7 +158,7 @@ cursor {
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
 device {
 	name = epic-mouse-v1
-		sensitivity = -0.5
+	sensitivity = -0.5
 }
 
 plugin {
@@ -175,8 +175,8 @@ plugin {
 		bar_part_of_window = true
 
 
-# example buttons (R -> L)
-# hyprbars-button = color, size, on-click
+		# example buttons (R -> L)
+		# hyprbars-button = color, size, on-click
 		hyprbars-button = rgb(ff4040), 20,  , hyprctl dispatch killactive
 		hyprbars-button = rgb(eeee11), 20,  , hyprctl dispatch fullscreen 2
 		hyprbars-button = rgb(11eeee), 20, 󰛓 , hyprctl dispatch togglefloating
@@ -215,19 +215,25 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod SHIFT, J, togglesplit, # dwindle
 bind = $mainMod, B, exec, $browser
 
 bind = SUPER, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 bind = SUPER SHIFT, 1, exec, sh ~/.config/hypr/scripts/screenshot area
 bind = SUPER SHIFT, 2, exec, sh ~/.config/hypr/scripts/screenshot monitor
 
+bind = SUPER, B, exec, sh ~/.dotfiles/.config/hypr/scripts/wallpaper_changer
+
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+# bind = $mainMod, left, movefocus, l
+# bind = $mainMod, right, movefocus, r
+# bind = $mainMod, up, movefocus, u
+# bind = $mainMod, down, movefocus, d
 bind = $mainMod, F, fullscreen
+bind = $mainMod, h, movefocus, l
+bind = $mainMod, l, movefocus, r
+bind = $mainMod, k, movefocus, u
+bind = $mainMod, j, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
