--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,8 +1,14 @@
 include duckbones.conf
 
-font_family      JetBrainsMono Nerd Font Mono Regular
-bold_font        JetBrainsMono Nerd Font Mono Extra Bold
-bold_italic_font JetBrainsMono Nerd Font Mono Extra Bold Italic
+# font_family      JetBrainsMono Nerd Font Mono Regular
+# bold_font        JetBrainsMono Nerd Font Mono Extra Bold
+# bold_italic_font JetBrainsMono Nerd Font Mono Extra Bold Italic
+
+# issue when I add "Regular" at the end of the font_family like this:
+# font_family MartianMono Nerd Font Mono Regular <--
+font_family MartianMono Nerd Font Mono
+bold_font        auto
+bold_italic_font auto
 
 font_size 11.0
 
