--- a/home/config/hypr/hyprland.conf
+++ b/home/config/hypr/hyprland.conf
@@ -31,11 +31,10 @@ exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 
-$yazi_exec = /home/radoje/pkgs/yazi/target/release/yazi
-
 # Set programs that you use
 $terminal = kitty
-$fileManager = $terminal -e $yazi_exec
+# $fileManager = $terminal -e $yazi_exec
+$fileManager = $terminal -e yazi
 $menu = wofi --show drun
 # $browser = sh -c "brave --ozone-platform-hint=auto"
 $browser = brave
