--- a/home/config/hypr/hyprland.conf
+++ b/home/config/hypr/hyprland.conf
@@ -20,9 +20,9 @@ monitor = HDMI-A-2, 1920x1080@75, 0x0, 1
 
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
-exec-once = ~/.config/hypr/scripts/xdg
+# exec-once = ~/.config/hypr/scripts/xdg
 exec-once = swww-daemon && dunst
-exec-once = /usr/lib/polkit-kde-authentication-agent-1
+# exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
@@ -203,6 +203,8 @@ windowrulev2 = size 1100 700, title:^(DevTools)
 windowrulev2 = center, title:^(DevTools)
 windowrulev2 = noblur, title:^()$, class:^()$
 
+windowrulev2 = opacity 0.94 0.94,class:^(Code|Slack|WebCord|Spotify|Kitty)$
+
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = ALT
 
@@ -221,7 +223,7 @@ bind = SUPER, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 bind = SUPER SHIFT, 1, exec, sh ~/.config/hypr/scripts/screenshot area
 bind = SUPER SHIFT, 2, exec, sh ~/.config/hypr/scripts/screenshot monitor
 
-bind = SUPER, B, exec, sh ~/.dotfiles/.config/hypr/scripts/wallpaper_changer
+bind = SUPER, B, exec, sh ~/.config/hypr/scripts/wallpaper_changer
 
 # Move focus with mainMod + arrow keys
 # bind = $mainMod, left, movefocus, l
