--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -52,7 +52,8 @@ input {
 	kb_layout = us,rs
 		kb_variant =
 		kb_model =
-		kb_options = grp:alt_space_toggle 
+	# kb_options = grp:alt_space_toggle
+		kb_options = grp:win_space_toggle
 		kb_rules =
 
 		follow_mouse = 1
@@ -213,7 +214,7 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit, 
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating, 
-bind = $mainMod, R, exec, $menu
+bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod SHIFT, J, togglesplit, # dwindle
 bind = $mainMod, B, exec, $browser
@@ -260,6 +261,30 @@ bind = $mainMod SHIFT, 7, movetoworkspace, 7
 bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
+
+# will switch to a submap called resize
+bind = $mainMod, R, submap, resize
+
+# will start a submap called "resize"
+submap=resize
+
+# sets repeatable binds for resizing the active window
+binde=,L,resizeactive,10 0
+binde=,H,resizeactive,-10 0
+binde=,K,resizeactive,0 -10
+binde=,J,resizeactive,0 10
+
+# use reset to go back to the global submap
+bind=,escape,submap,reset 
+
+# will reset the submap, which will return to the global submap
+submap=reset
+
+# Move active window
+bind = $mainMod SHIFT, H, movewindow, l
+bind = $mainMod SHIFT, L, movewindow, r
+bind = $mainMod SHIFT, K, movewindow, u
+bind = $mainMod SHIFT, J, movewindow, d
 
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
