--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,14 +1,17 @@
 include duckbones.conf
 
 # font_family      JetBrainsMono Nerd Font Mono Regular
-# bold_font        JetBrainsMono Nerd Font Mono Extra Bold
-# bold_italic_font JetBrainsMono Nerd Font Mono Extra Bold Italic
+# bold_font        auto
+# bold_italic_font auto
+font_family      Iosevka
+bold_font        auto
+bold_italic_font auto
 
 # issue when I add "Regular" at the end of the font_family like this:
 # font_family MartianMono Nerd Font Mono Regular <--
-font_family MartianMono Nerd Font Mono
-bold_font        auto
-bold_italic_font auto
+# font_family MartianMono Nerd Font Mono
+# bold_font        auto
+# bold_italic_font auto
 
 font_size 11.0
 
