--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -22,6 +22,7 @@ monitor = HDMI-A-2, 1920x1080@75, 0x0, 1
 # exec-once = waybar & hyprpaper & firefox
 exec-once = ~/.config/hypr/scripts/xdg
 exec-once = swww-daemon && dunst
+exec-once = nwg-panel
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
