add floating terminal

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -40,6 +40,7 @@ $fileManager = $terminal -e $yazi_exec
 $menu = wofi --show drun
 # $browser = sh -c "brave --ozone-platform-hint=auto"
 $browser = brave
+$floating_terminal = $terminal
 
 # Some default env vars.
 # env = XCURSOR_SIZE,24
@@ -205,6 +206,8 @@ windowrulev2 = float, title:^(DevTools)
 windowrulev2 = size 1100 700, title:^(DevTools)
 windowrulev2 = center, title:^(DevTools)
 windowrulev2 = noblur, title:^()$, class:^()$
+windowrulev2 = float, class:floating
+windowrulev2 = size 1300 900, class:floating
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = ALT
@@ -219,6 +222,7 @@ bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod SHIFT, J, togglesplit, # dwindle
 bind = $mainMod, B, exec, $browser
+bind = $mainMod SHIFT, Q, exec, $floating_terminal --class floating
 
 bind = SUPER, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 bind = SUPER SHIFT, 1, exec, sh ~/.config/hypr/scripts/screenshot area
