update pkgs and add hyprland scaling

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -48,6 +48,15 @@ env = QT_QPA_PLATFORMTHEME,qt6ct # change to qt6ct if you have that
 
 env = HYPRCURSOR_THEME,rose-pine-hyprcursor
 env = HYPRCURSOR_SIZE,24
+env = GDK_SCALE, 1
+env = QT_AUTO_SCREEN_SCALE_FACTOR,1
+env = QT_SCALE_FACTOR,1.5
+env = QT_FONT_DPI,134
+
+# unscale XWayland
+xwayland {
+  force_zero_scaling = true
+}
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -60,6 +69,7 @@ input {
 
 		follow_mouse = 1
 		natural_scroll = yes
+		scroll_factor = 1
 
 		repeat_rate = 50
 		repeat_delay = 200
@@ -148,6 +158,11 @@ misc {
 
 	enable_swallow = true
 	swallow_regex = ^(kitty)$
+}
+
+binds {
+	pass_mouse_when_bound = false
+	scroll_event_delay = 0
 }
 
 cursor {
@@ -296,8 +311,8 @@ bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
+# bind = $mainMod, mouse_down, workspace, e+1
+# bind = $mainMod, mouse_up, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
@@ -307,3 +322,11 @@ bindm = $mainMod, mouse:273, resizewindow
 bindel=, XF86AudioRaiseVolume, exec, pamixer -i 5 && dunstify "Volume: " -h int:value:"`pamixer --get-volume`"
 bindel=, XF86AudioLowerVolume, exec, pamixer -d 5 && dunstify "Volume: " -h int:value:"`pamixer --get-volume`"
 bindl=, XF86AudioMute, exec, pamixer -t && dunstify "Mute: " -h string:value:"`pamixer --get-mute`"
+
+# Magnifier
+# bind = $mainMod, mouse_down, exec, current=$(hyprctl getoption cursor:zoom_factor | head -n 1 | awk '{print $2;}') && hyprctl keyword cursor:zoom_factor $(echo "$current + 0.5"|bc)
+# bind = $mainMod, mouse_up, exec, current=$(hyprctl getoption cursor:zoom_factor | head -n 1 | awk '{print $2;}') && hyprctl keyword cursor:zoom_factor $(echo "$current - 0.5"|bc)
+# bind = $mainMod SHIFT, mouse_up, exec, hyprctl keyword cursor:zoom_factor 1
+
+bind = $mainMod, mouse_up, exec, hyprctl keyword cursor:zoom_factor $(awk "BEGIN {print $(hyprctl getoption cursor:zoom_factor | grep 'float:' | awk '{print $2}') - 0.5}")
+bind = $mainMod, mouse_down, exec, hyprctl keyword cursor:zoom_factor $(awk "BEGIN {print $(hyprctl getoption cursor:zoom_factor | grep 'float:' | awk '{print $2}') + 0.5}")
