add eww to start in hyrpland

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -22,7 +22,6 @@ monitor = HDMI-A-2, 1920x1080@75, 0x0, 1
 # exec-once = waybar & hyprpaper & firefox
 exec-once = ~/.config/hypr/scripts/xdg
 exec-once = swww-daemon && dunst
-exec-once = nwg-panel
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
@@ -41,6 +40,10 @@ $menu = wofi --show drun
 # $browser = sh -c "brave --ozone-platform-hint=auto"
 $browser = brave
 $floating_terminal = $terminal
+$eww_path = ~/pkgs/eww/target/release
+
+exec-once = $eww_path/eww deamon
+exec-once = $eww_path/eww open main
 
 # Some default env vars.
 # env = XCURSOR_SIZE,24
