--- a/.config/wofi/config
+++ b/.config/wofi/config
@@ -3,7 +3,7 @@ show=drun
 width=30%
 lines=8
 line_wrap=word
-term=alacritty
+term=kitty
 allow_markup=ture
 always_parse_args=false
 show_all=false
@@ -16,5 +16,4 @@ prompt=Hi Mom!
 image_size=20
 display_generic=false
 location=center
-key_expand=Tab
 insensitive=false
