--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -13,7 +13,13 @@ bold_italic_font auto
 # bold_font        auto
 # bold_italic_font auto
 
-font_size 11.0
+font_size 20.0
+
+window_padding_width 0
+window_margin_width 0
+
+shell_integration no-cursor
+cursor_shape block
 
 # disalbe terminal bell
 enable_audio_bell no
