disable blur for wofi and add new bindings for middle click

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -205,7 +205,7 @@ plugin {
 }
 
 # Layers
-layerrule = blur,wofi
+# layerrule = blur,wofi
 #layerrule = blur,notifications
 
 # Window rules
@@ -320,6 +320,7 @@ bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+# bind = , mouse:274, killactive
 
 # Media
 bindel=, XF86AudioRaiseVolume, exec, pamixer -i 5 && dunstify "Volume: " -h int:value:"`pamixer --get-volume`"
