--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -18,6 +18,9 @@ font_size 20.0
 window_padding_width 0
 window_margin_width 0
 
+# enabled_layouts vertical,stack
+map kitty_mod+m toggle_layout stack
+
 shell_integration no-cursor
 cursor_shape block
 
