--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,4 +1,8 @@
 include duckbones.conf
+# BEGIN_KITTY_THEME
+# Kanagawa_light
+#include current-theme.conf
+# END_KITTY_THEME
 
 # font_family      JetBrainsMono Nerd Font Mono Regular
 # bold_font        auto
