update hyprland to 0.45

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -117,10 +117,11 @@ decoration {
 		popups_ignorealpha = 0.6
 	}
 
-	drop_shadow = yes
-	shadow_range = 4
-	shadow_render_power = 3
-	col.shadow = rgba(1a1a1aee)
+	shadow {
+		range = 4
+		render_power = 3
+		sharp = true
+	}
 
 	dim_inactive = false
 	dim_strength = 0.1
@@ -228,7 +229,7 @@ windowrulev2 = float, class:floating
 windowrulev2 = size 1300 900, class:floating
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
-$mainMod = ALT
+$mainMod = ALT_R
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
