add gruvbox theme for kitty

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,7 +1,7 @@
 include duckbones.conf
 # BEGIN_KITTY_THEME
-# Kanagawa_light
-#include current-theme.conf
+# Gruvbox Dark Hard
+include Gruvbox Dark Hard.conf
 # END_KITTY_THEME
 
 # font_family      JetBrainsMono Nerd Font Mono Regular
