--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -36,7 +36,8 @@ $yazi_exec = /home/radoje/pkgs/yazi/target/release/yazi
 # Set programs that you use
 $terminal = kitty
 $fileManager = $terminal -e $yazi_exec
-$menu = wofi --show drun
+# $menu = wofi --show drun
+$menu = rofi -show drun
 # $browser = sh -c "brave --ozone-platform-hint=auto"
 $browser = brave
 $floating_terminal = $terminal
@@ -44,6 +45,7 @@ $eww_path = ~/pkgs/eww/target/release
 
 exec-once = $eww_path/eww deamon
 exec-once = $eww_path/eww open main
+exec-once = $eww_path/eww open bar
 
 # Some default env vars.
 # env = XCURSOR_SIZE,24
