--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,12 +1,11 @@
-include duckbones.conf
-# BEGIN_KITTY_THEME
+# include duckbones.conf
 # Gruvbox Dark Hard
 include Gruvbox Dark Hard.conf
-# END_KITTY_THEME
 
 # font_family      JetBrainsMono Nerd Font Mono Regular
 # bold_font        auto
 # bold_italic_font auto
+
 font_family      Iosevka
 bold_font        auto
 bold_italic_font auto
@@ -30,9 +29,6 @@ cursor_shape block
 
 # disalbe terminal bell
 enable_audio_bell no
-
-symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00A,U+E0A0-U+E0A3,U+E0B0-U+E0C8,U+E0CA,U+E0CC-U+E0D2,U+E0D4,U+E200-U+E2A9,U+E300-U+E3E3,U+E5FA-U+E62F,U+E700-U+E7C5,U+F000-U+F2E0,U+F300-U+F31C,U+F400-U+F4A9,U+F500-U+F8FF Symbols Nerd Font
-
 
 map ctrl+right resize_window narrower
 map ctrl+left resize_window wider
