fix some edge cases with eww and add volume popup

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -41,11 +41,10 @@ $menu = rofi -show drun
 # $browser = sh -c "brave --ozone-platform-hint=auto"
 $browser = brave
 $floating_terminal = $terminal
-$eww_path = ~/pkgs/eww/target/release
+$eww = ~/pkgs/eww/target/release/eww
 
-exec-once = $eww_path/eww deamon
-exec-once = $eww_path/eww open main
-exec-once = $eww_path/eww open bar
+exec-once = $eww deamon
+exec-once = $eww open-many main bar
 
 # Some default env vars.
 # env = XCURSOR_SIZE,24
