--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,6 +1,7 @@
 # include duckbones.conf
 # Gruvbox Dark Hard
-include Gruvbox Dark Hard.conf
+# include Gruvbox Dark Hard.conf
+# include Flexoki (Light).conf
 
 # font_family      JetBrainsMono Nerd Font Mono Regular
 # bold_font        auto
@@ -36,3 +37,9 @@ map ctrl+up resize_window taller
 map ctrl+down resize_window shorter 3
 # reset all windows in the tab to default sizes
 map ctrl+= resize_window reset
+
+
+# BEGIN_KITTY_THEME
+# Flexoki (Dark)
+include current-theme.conf
+# END_KITTY_THEME
