--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -28,6 +28,8 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 
+exec-once = ~/.dotfiles/.config/hypr/scripts/kitten-themes
+
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 
