--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -28,12 +28,15 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 
-exec-once = ~/.dotfiles/.config/hypr/scripts/kitten-themes
+exec-once = ~/.dotfiles/.config/hypr/scripts/theme-switcher
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 
 $yazi_exec = /home/radoje/pkgs/yazi/target/release/yazi
+$notify = ~/.dotfiles/.config/hypr/scripts/notify
+$scripts = ~/.dotfiles/.config/hypr/scripts/
+$volume = $scripts/set-volume
 
 # Set programs that you use
 $terminal = kitty
@@ -43,10 +46,9 @@ $menu = rofi -show drun
 # $browser = sh -c "brave --ozone-platform-hint=auto"
 $browser = brave
 $floating_terminal = $terminal
-$eww = ~/pkgs/eww/target/release/eww
 
-exec-once = $eww deamon
-exec-once = $eww open-many main bar
+exec-once = eww deamon
+exec-once = eww open-many main bar
 
 # Some default env vars.
 # env = XCURSOR_SIZE,24
@@ -327,9 +329,13 @@ bindm = $mainMod, mouse:273, resizewindow
 # bind = , mouse:274, killactive
 
 # Media
-bindel=, XF86AudioRaiseVolume, exec, pamixer -i 5 && dunstify "Volume: " -h int:value:"`pamixer --get-volume`"
-bindel=, XF86AudioLowerVolume, exec, pamixer -d 5 && dunstify "Volume: " -h int:value:"`pamixer --get-volume`"
-bindl=, XF86AudioMute, exec, pamixer -t && dunstify "Mute: " -h string:value:"`pamixer --get-mute`"
+# bindel=, XF86AudioRaiseVolume, exec, pamixer -i 5 && dunstify "Volume: " -h int:value:"`pamixer --get-volume`"
+# bindel=, XF86AudioLowerVolume, exec, pamixer -d 5 && dunstify "Volume: " -h int:value:"`pamixer --get-volume`"
+# bindl=, XF86AudioMute, exec, pamixer -t && dunstify "Mute: " -h string:value:"`pamixer --get-mute`"
+# Media
+bindel=, XF86AudioRaiseVolume, exec, $volume --inc
+bindel=, XF86AudioLowerVolume, exec, $volume --dec
+bindl=, XF86AudioMute, exec, $volume --toggle
 
 # Magnifier
 # bind = $mainMod, mouse_down, exec, current=$(hyprctl getoption cursor:zoom_factor | head -n 1 | awk '{print $2;}') && hyprctl keyword cursor:zoom_factor $(echo "$current + 0.5"|bc)
