--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -27,6 +27,7 @@ map kitty_mod+m toggle_layout stack
 
 shell_integration no-cursor
 cursor_shape block
+cursor_trail 0 # means on animation, any possitive int will enable the animation of cursor
 
 # disalbe terminal bell
 enable_audio_bell no
@@ -40,6 +41,6 @@ map ctrl+= resize_window reset
 
 
 # BEGIN_KITTY_THEME
-# Flexoki (Dark)
+# Flexoki (Light)
 include current-theme.conf
 # END_KITTY_THEME
