bindings for dark/light theme change

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -28,7 +28,7 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 
-exec-once = ~/.dotfiles/.config/hypr/scripts/theme-switcher
+# exec-once = ~/.dotfiles/.config/hypr/scripts/theme-switcher
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -253,6 +253,8 @@ bind = SUPER SHIFT, 1, exec, sh ~/.config/hypr/scripts/screenshot area
 bind = SUPER SHIFT, 2, exec, sh ~/.config/hypr/scripts/screenshot monitor
 
 bind = SUPER, B, exec, sh ~/.dotfiles/.config/hypr/scripts/wallpaper_changer
+bind = SUPER SHIFT, T, exec, sh ~/.dotfiles/.config/hypr/scripts/theme-switcher dark
+bind = SUPER, T, exec, sh ~/.dotfiles/.config/hypr/scripts/theme-switcher light
 
 # Move focus with mainMod + arrow keys
 # bind = $mainMod, left, movefocus, l
