--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -68,8 +68,8 @@ xwayland {
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
-    kb_layout = us,rs
-		kb_variant =
+    kb_layout = us,rs,rs
+		kb_variant = ,,latin
 		kb_model =
 	# kb_options = grp:alt_space_toggle
 		kb_options = grp:win_space_toggle
