--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -61,6 +61,8 @@ env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = QT_SCALE_FACTOR,1.5
 env = QT_FONT_DPI,134
 
+env = ELECTRON_OZONE_PLATFORM_HINT,wayland
+
 # unscale XWayland
 xwayland {
   force_zero_scaling = true
@@ -225,6 +227,10 @@ windowrule = size 600 400, title:(Open File)
 windowrulev2 = float, class:^(firefoxdeveloperedition)
 windowrulev2 = size 1100 700, class:^(firefoxdeveloperedition)
 windowrulev2 = center, class:^(firefoxdeveloperedition)
+windowrulev2 = float, title:^(Picture-in-Picture)
+windowrulev2 = size 400 220, title:^(Picture-in-Picture)
+windowrulev2 = move 100%-w-10 100%-w-35, title:^(Picture-in-Picture)
+windowrulev2 = pin, title:^(Picture-in-Picture)
 # windowrule for Brave dev tools when it's detatch form window
 windowrulev2 = float, title:^(DevTools)
 windowrulev2 = size 1100 700, title:^(DevTools)
@@ -234,7 +240,7 @@ windowrulev2 = float, class:floating
 windowrulev2 = size 1300 900, class:floating
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
-$mainMod = ALT_R
+$mainMod = Alt_R
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
