--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,15 +7,20 @@
 # bold_font        auto
 # bold_italic_font auto
 
-font_family      Iosevka
-bold_font        auto
-bold_italic_font auto
+# font_family      Iosevka
+# bold_font        auto
+# bold_italic_font auto
+font_family      0xProto
+# bold_font        auto
+# bold_italic_font auto
 
 # issue when I add "Regular" at the end of the font_family like this:
 # font_family MartianMono Nerd Font Mono Regular <--
 # font_family MartianMono Nerd Font Mono
 # bold_font        auto
 # bold_italic_font auto
+
+font_features FiraCode-Regular +ss01 +ss02 +ss03 +ss04 +ss05 +ss07 +ss08 +zero +onum
 
 font_size 20.0
 
@@ -27,7 +32,8 @@ map kitty_mod+m toggle_layout stack
 
 shell_integration no-cursor
 cursor_shape block
-cursor_trail 0 # means on animation, any possitive int will enable the animation of cursor
+# means on animation, any possitive int will enable the animation of cursor
+cursor_trail 0 
 
 # disalbe terminal bell
 enable_audio_bell no
@@ -41,6 +47,6 @@ map ctrl+= resize_window reset
 
 
 # BEGIN_KITTY_THEME
-# Flexoki (Light)
+# Flexoki (Dark)
 include current-theme.conf
 # END_KITTY_THEME
