--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -22,8 +22,9 @@ monitor = HDMI-A-2, 1920x1080@75, 0x0, 1
 # exec-once = waybar & hyprpaper & firefox
 exec-once = ~/.config/hypr/scripts/xdg
 exec-once = swww-daemon && dunst
-exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = wl-paste -t text -w xclip -selection clipboard # enable clipboard in wine apps
+exec-once = systemctl --user start hyprpolkitagent
 
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
@@ -109,6 +110,7 @@ general {
 decoration {
 	# See https://wiki.hyprland.org/Configuring/Variables/ for more
 	rounding = 0
+  rounding_power = 0
 
 	blur {
 		enabled = true
