minor changes removing and adding some ui and lsp servers

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,10 +7,10 @@
 # bold_font        auto
 # bold_italic_font auto
 
-# font_family      Iosevka
+font_family      Iosevka
 # bold_font        auto
 # bold_italic_font auto
-font_family      0xProto
+#font_family      0xProto
 # bold_font        auto
 # bold_italic_font auto
 
