minor kitty update

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -45,6 +45,8 @@ map ctrl+down resize_window shorter 3
 # reset all windows in the tab to default sizes
 map ctrl+= resize_window reset
 
+tab_bar_style separator
+tab_title_max_length 0
 
 # BEGIN_KITTY_THEME
 # Flexoki (Dark)
