implement auto hide for eww

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -14,7 +14,7 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 #monitor=,preferred,auto,auto
-monitor = HDMI-A-2, 1920x1080@75, 0x0, 1
+monitor = DP-2, 3840x2160@240.08400, 0x0, 2
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -50,6 +50,7 @@ $floating_terminal = $terminal
 
 exec-once = eww deamon
 exec-once = eww open-many main bar
+exec-once = $scripts/auto_hide_bar.sh
 
 # Some default env vars.
 # env = XCURSOR_SIZE,24
