minor hypr updates

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -14,7 +14,8 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 #monitor=,preferred,auto,auto
-monitor = DP-2, 3840x2160@240.08400, 0x0, 2
+#monitor = DP-2, 3840x2160@240.08400, 0x0, 2
+monitor = DP-1, 3840x2160@480, 0x0, 2
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -50,7 +51,7 @@ $floating_terminal = $terminal
 
 exec-once = eww deamon
 exec-once = eww open-many main bar
-exec-once = $scripts/auto_hide_bar.sh
+# exec-once = $scripts/auto_hide_bar.sh
 
 # Some default env vars.
 # env = XCURSOR_SIZE,24
@@ -97,7 +98,7 @@ general {
 	# See https://wiki.hyprland.org/Configuring/Variables/ for more
 	gaps_in = 5
 	gaps_out = 5
-	border_size = 3
+	border_size = 2
 	col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
 	col.inactive_border = rgba(595959aa)
 
@@ -107,6 +108,7 @@ general {
 	# Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
 	allow_tearing = false
 }
+
 
 decoration {
 	# See https://wiki.hyprland.org/Configuring/Variables/ for more
@@ -130,7 +132,7 @@ decoration {
 	shadow {
 		range = 4
 		render_power = 3
-		sharp = true
+		sharp = false
 	}
 
 	dim_inactive = false
@@ -177,12 +179,14 @@ misc {
 binds {
 	pass_mouse_when_bound = false
 	scroll_event_delay = 0
+  movefocus_cycles_fullscreen = true # allow movefocus to switch between fullscreen apps
 }
 
 cursor {
 	enable_hyprcursor = true
 	zoom_rigid = false # set cursor in the center
 	zoom_factor = 1.0
+  no_hardware_cursors = true
 }
 
 
@@ -254,7 +258,8 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod SHIFT, J, togglesplit, # dwindle
-bind = $mainMod, B, exec, $browser
+#bind = $mainMod, B, exec, $browser
+#bind = $mainMode, B, exec, blender
 bind = $mainMod SHIFT, Q, exec, $floating_terminal --class floating
 
 bind = SUPER, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
@@ -318,6 +323,12 @@ binde=,J,resizeactive,0 10
 bind=,escape,submap,reset 
 
 # will reset the submap, which will return to the global submap
+submap=reset
+
+bind = $mainMod, B, submap, blender_mode
+submap=blender_mode
+
+bind=,escape,submap,reset
 submap=reset
 
 # Move active window
