add sherlock binding

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -44,7 +44,8 @@ $volume = $scripts/set-volume
 $terminal = kitty
 $fileManager = $terminal -e $yazi_exec
 # $menu = wofi --show drun
-$menu = rofi -show drun
+# $menu = rofi -show drun
+$menu = sherlock
 # $browser = sh -c "brave --ozone-platform-hint=auto"
 $browser = brave
 $floating_terminal = $terminal
