--- a/.config/sherlock/config.toml
+++ b/.config/sherlock/config.toml
@@ -20,3 +20,7 @@ caching                 =   false                                   # If set to 
 cache                   =   "~/.cache/sherlock_desktop_cache.json"  # Sets the location for caching files
 daemonize               =   false                                   # Enables deamon mode
 animation               =   true                                    # Enables startup animations
+
+[binds]
+next = "tab"
+prev = "control-tab"
