--- a/.config/sherlock/config.toml
+++ b/.config/sherlock/config.toml
@@ -23,4 +23,4 @@ animation               =   true                                    # Enables st
 
 [binds]
 next = "tab"
-prev = "control-tab"
+prev = "shift-tab"
