add hyprlock and hypridle

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -15,7 +15,7 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 #monitor=,preferred,auto,auto
 #monitor = DP-2, 3840x2160@240.08400, 0x0, 2
-monitor = DP-1, 3840x2160@480, 0x0, 2
+monitor = desc:LG Electronics LG ULTRAGEAR+ 407NTZN9U525, 3840x2160@480, 0x0, 2
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -26,6 +26,8 @@ exec-once = swww-daemon && dunst
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = wl-paste -t text -w xclip -selection clipboard # enable clipboard in wine apps
 exec-once = systemctl --user start hyprpolkitagent
+
+exec-once = hypridle
 
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
@@ -66,6 +68,8 @@ env = QT_SCALE_FACTOR,1.5
 env = QT_FONT_DPI,134
 
 env = ELECTRON_OZONE_PLATFORM_HINT,wayland
+
+env = HYPRLAND_TRACE=1 AQ_TRACE=1
 
 # unscale XWayland
 xwayland {
@@ -175,6 +179,8 @@ misc {
 
 	enable_swallow = true
 	swallow_regex = ^(kitty)$
+  mouse_move_enables_dpms = true
+  key_press_enables_dpms = true
 }
 
 binds {
@@ -218,6 +224,10 @@ plugin {
 		hyprbars-button = rgb(eeee11), 20,  , hyprctl dispatch fullscreen 2
 		hyprbars-button = rgb(11eeee), 20, 󰛓 , hyprctl dispatch togglefloating
 	}
+}
+
+debug {
+  disable_logs = true
 }
 
 # Layers
