add discord as floating window

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -257,6 +257,10 @@ windowrulev2 = noblur, title:^()$, class:^()$
 windowrulev2 = float, class:floating
 windowrulev2 = size 1300 900, class:floating
 
+windowrulev2 = float, title:^(Discord)
+windowrulev2 = size 1280 729, title:^(Discord)
+windowrulev2 = center, title:^(Discord)
+
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = Alt_R
 
