--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -50,5 +50,5 @@ tab_title_max_length 0
 
 # BEGIN_KITTY_THEME
 # Flexoki (Dark)
-include current-theme.conf
+# include current-theme.conf
 # END_KITTY_THEME
