change active border color

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -104,7 +104,8 @@ general {
 	gaps_in = 5
 	gaps_out = 5
 	border_size = 2
-	col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+	# col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+	col.active_border = rgba(1694CFFF)
 	col.inactive_border = rgba(595959aa)
 
 	layout = dwindle
