prevent zooming beyone 1

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -380,5 +380,5 @@ bindl=, XF86AudioMute, exec, $volume --toggle
 # bind = $mainMod, mouse_up, exec, current=$(hyprctl getoption cursor:zoom_factor | head -n 1 | awk '{print $2;}') && hyprctl keyword cursor:zoom_factor $(echo "$current - 0.5"|bc)
 # bind = $mainMod SHIFT, mouse_up, exec, hyprctl keyword cursor:zoom_factor 1
 
-bind = $mainMod, mouse_up, exec, hyprctl keyword cursor:zoom_factor $(awk "BEGIN {print $(hyprctl getoption cursor:zoom_factor | grep 'float:' | awk '{print $2}') - 0.5}")
+bind = $mainMod, mouse_up, exec, hyprctl keyword cursor:zoom_factor $(awk "BEGIN { val = $(hyprctl getoption cursor:zoom_factor | grep 'float:' | awk '{print $2}'); val = (val - 0.5 < 1.0) ? 1.0 : val - 0.5; print val }")
 bind = $mainMod, mouse_down, exec, hyprctl keyword cursor:zoom_factor $(awk "BEGIN {print $(hyprctl getoption cursor:zoom_factor | grep 'float:' | awk '{print $2}') + 0.5}")
