--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -37,14 +37,13 @@ exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 
-$yazi_exec = /home/radoje/pkgs/yazi/target/release/yazi
 $notify = ~/.dotfiles/.config/hypr/scripts/notify
 $scripts = ~/.dotfiles/.config/hypr/scripts/
 $volume = $scripts/set-volume
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = $terminal -e $yazi_exec
+$fileManager = $terminal -e yazi
 # $menu = wofi --show drun
 # $menu = rofi -show drun
 $menu = sherlock
